@@ -1,21 +1,3 @@
-/*
- * Copyright (C) 2018 DBSoftwares - Dieter Blancke
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program. If not, see <http://www.gnu.org/licenses/>.
- *
- */
-
 package be.dieterblancke.bungeeutilisalsx.common.commands.general;
 
 import be.dieterblancke.bungeeutilisalsx.common.BuX;
@@ -27,9 +9,10 @@ import be.dieterblancke.bungeeutilisalsx.common.api.utils.other.IProxyServer;
 import be.dieterblancke.bungeeutilisalsx.common.api.utils.other.StaffRankData;
 import be.dieterblancke.bungeeutilisalsx.common.api.utils.other.StaffUser;
 import be.dieterblancke.bungeeutilisalsx.common.api.utils.text.MessageBuilder;
-import com.dbsoftwares.configuration.api.IConfiguration;
+import be.dieterblancke.configuration.api.IConfiguration;
 import com.google.common.collect.Lists;
-import net.md_5.bungee.api.chat.TextComponent;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.TextComponent;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -103,10 +86,10 @@ public class StaffCommandCall implements CommandCall
         for ( StaffRankData rank : onlineStaffRanks )
         {
             final List<StaffUser> users = staffMembers.get( rank );
-            final TextComponent component = MessageBuilder.buildMessage(
+            final Component component = MessageBuilder.buildMessage(
                     user,
                     user.getLanguageConfig().getConfig().getSection( "general-commands.staff.rank" ),
-                    "{rank_displayname}", Utils.c( rank.getDisplay() ),
+                    "{rank_displayname}", rank.getDisplay(),
                     "{amount_online}", users.size(),
                     "{total}", staffUsers.size()
             );
@@ -115,7 +98,7 @@ public class StaffCommandCall implements CommandCall
 
             for ( TextComponent c : components )
             {
-                c.setText( "" );
+                c = c.content( "" );
 
                 users.sort( Comparator.comparing( StaffUser::getName ) );
                 final Iterator<StaffUser> userIt = users.iterator();
@@ -125,7 +108,7 @@ public class StaffCommandCall implements CommandCall
                     final StaffUser u = userIt.next();
                     final IProxyServer info = BuX.getApi().getPlayerUtils().findPlayer( u.getName() );
 
-                    c.addExtra( MessageBuilder.buildMessage(
+                    c = c.append( MessageBuilder.buildMessage(
                             user,
                             user.getLanguageConfig().getConfig().getSection( "general-commands.staff.users.user" ),
                             "{username}", u.getName(),
@@ -134,7 +117,7 @@ public class StaffCommandCall implements CommandCall
 
                     if ( userIt.hasNext() )
                     {
-                        c.addExtra( Utils.c( user.getLanguageConfig().buildLangMessage( "general-commands.staff.users.separator" ) ) );
+                        c = c.append( Utils.format( user.getLanguageConfig().buildLangMessage( "general-commands.staff.users.separator" ) ) );
                     }
                 }
             }
@@ -157,21 +140,21 @@ public class StaffCommandCall implements CommandCall
         return "/staff";
     }
 
-    private List<TextComponent> findUsersComponents( final TextComponent component )
+    private List<TextComponent> findUsersComponents( final Component component )
     {
-        final List<TextComponent> components = component.getExtra().stream()
+        final List<TextComponent> components = component.children().stream()
                 .filter( c -> c instanceof TextComponent )
                 .map( c -> (TextComponent) c )
-                .collect( Collectors.toList() );
+                .toList();
         final List<TextComponent> finalComponents = Lists.newArrayList();
 
         for ( TextComponent c : components )
         {
-            if ( c.getExtra() != null && !c.getExtra().isEmpty() )
+            if ( c.children() != null && !c.children().isEmpty() )
             {
                 finalComponents.addAll( findUsersComponents( c ) );
             }
-            if ( c.getText().contains( "{users}" ) )
+            if ( c.content().contains( "{users}" ) )
             {
                 finalComponents.add( c );
             }
